# bastards_staking

./: .gitignore  Anchor.toml  README.md
programs/staking_minigame/: Cargo.toml
programs/staking_minigame/src/: errors.rs  lib.rs  utils.rs
programs/staking_minigame/src/instructions/: loot_config.rs  loot_staking.rs  mine_config.rs  mine_staking.rs  program_config.rs
programs/staking_minigame/src/states/: character.rs  loot.rs  mine.rs  whitelist.rs
tests/: staking_minigame.ts
