[package]
name = "staking_minigame"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_minigame"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
arrayref = "0.3.6"
solana-program = "1.9.13"
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = "3.1.0"
mpl-token-metadata = { version = "1.4.3", features = [ "no-entrypoint" ]}
